<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/backgroud_common"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/top_title_bg"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="累计奖励(元)"
                android:textColor="@color/WHITE"
                android:textSize="12dp"/>

            <com.v5ent.xiubit.view.MyTextView
                android:id="@+id/totalProfitTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textColor="@color/WHITE"
                android:textSize="24dp"/>
        </LinearLayout>

        <View
            android:layout_height="24dp"
            style="@style/line_vertical_common"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="本月奖励(元)"
                android:textColor="@color/WHITE"
                android:textSize="12dp"/>

            <com.v5ent.xiubit.view.MyTextView
                android:id="@+id/monthProfitTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textColor="@color/WHITE"
                android:textSize="24dp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/line_horizontal_common"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >

            <View
                android:layout_width="3dp"
                android:layout_height="12dp"
                android:layout_marginRight="6dp"
                android:background="@color/text_blue_common"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direct_cfp"
                android:textColor="@color/text_black_common6c"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/directCfpNumTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="(0人)"
                android:textColor="@color/text_black_common"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/remindNotAccountwhithAwardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remind_teamer_num_not_account_whith_award"
                android:textColor="@color/text_black_common6c"
                android:textSize="12dp"
                />

        </LinearLayout>

        <View
            style="@style/line_horizontal_common"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/horLv"
            android:layout_width="wrap_content"
            android:layout_height="93dp"
            >

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/empty_directCfp_contant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center"
            android:padding="15dp"
            android:visibility="gone">

            <Button
                android:id="@+id/invite_friend_comein_team"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/btn_blue_corner5_selector"
                android:text="@string/invite_friend_comein_team"
                android:textAllCaps="false"
                android:textColor="@color/WHITE"
                android:textSize="16dp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        style="@style/line_horizontal_common"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/WHITE"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >

        <View
            android:layout_width="3dp"
            android:layout_height="12dp"
            android:layout_marginRight="6dp"
            android:background="@color/text_blue_common"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/direct_cfp_contribution_detail"
            android:textColor="@color/text_black_common6c"
            android:textSize="12dp"/>
    </LinearLayout>

    <View
        style="@style/line_horizontal_common"/>


</LinearLayout>